--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alat Rekonsiliasi Data (Perbandingan ID) - Optimized & Duplicates Handled</title>
+    <title>WEB CARI SELISIH BY LEO (Perbandingan ID) - Optimized & Duplicates Handled</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -42,8 +42,8 @@
 
     <div class="max-w-screen-xl mx-auto">
         <header class="text-center mb-8">
-            <h1 class="text-3xl font-bold text-gray-900">Alat Rekonsiliasi Data Massal</h1>
-            <p class="mt-2 text-lg text-gray-600">Bandingkan ID dan nominal berdampingan untuk validasi yang akurat.</p>
+            <h1 class="text-3xl font-bold text-gray-900">WEB PENCARI SELISIH</h1>
+            <p class="mt-2 text-lg text-gray-600">Masih tester bosku ^^.</p>
         </header>
 
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
@@ -52,21 +52,21 @@
                 <!-- Data Sistem -->
                 <div class="bg-white p-6 rounded-xl shadow-md">
                     <h2 class="text-xl font-semibold mb-2">1. Tempel Data Sistem (Panel)</h2>
-                    <p class="text-sm text-gray-500 mb-4">Salin 2 kolom (ID dan Nominal) dari Excel lalu tempel di sini.</p>
+                    <p class="text-sm text-gray-500 mb-4">Salin 2 kolom (ID dan Nominal) dari Excel /SHEET lalu tempel di sini.</p>
                     <textarea id="sistem-data" class="textarea-data" placeholder="Contoh:&#10;123ad   50000&#10;456ef   75000&#10;123ad   50000 &#10;123ad   60000 &#10;ID Dengan Spasi   100000"></textarea>
                 </div>
 
                 <!-- Data Manual -->
                 <div class="bg-white p-6 rounded-xl shadow-md">
-                    <h2 class="text-xl font-semibold mb-2">2. Tempel Data Catatan Manual</h2>
-                    <p class="text-sm text-gray-500 mb-4">Salin 2 kolom (ID dan Nominal) dari Excel lalu tempel di sini.</p>
+                    <h2 class="text-xl font-semibold mb-2">2. Tempel Data Catatan Dari Sheet/Excel</h2>
+                    <p class="text-sm text-gray-500 mb-4">Salin 2 kolom (ID dan Nominal) dari Excel/SHEET lalu tempel di sini.</p>
                     <textarea id="manual-data" class="textarea-data" placeholder="Contoh:&#10;123AD   49000&#10;456ef   75000&#10;123AD   50000&#10;101ij   15000&#10;ID DENGAN SPASI   100000"></textarea>
                 </div>
             </div>
 
             <!-- Kolom Hasil Rekonsiliasi -->
             <div class="bg-white p-6 rounded-xl shadow-lg">
-                <h2 class="text-xl font-semibold mb-4 border-b pb-2">3. Hasil Rekonsiliasi Otomatis</h2>
+                <h2 class="text-xl font-semibold mb-4 border-b pb-2">3. Hasil Nya Bosku^^</h2>
                 <div class="flex justify-end mb-4">
                     <button id="download-csv" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out">
                         Unduh Hasil (CSV)
